Implementa flujo backend F2-F5
